Deployment/Portal/resources-dev/portal-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: joinrpg-portal
  name: joinrpg-portal
  namespace: dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: joinrpg-portal
  strategy: {}
  
  template:
    metadata:
      labels:
        app: joinrpg-portal
    spec:
      containers:
      - image:  joinrpg.azurecr.io/joinrpg.portal-dev
        name: server
        resources: {}
