Deployment/Portal/resources-dev/portal-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: joinrpg-portal-ingress
  namespace: dev
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "false"
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: joinrpg-portal-svc
          servicePort: 80
        path: /
